<resources>

    <string name="app_name">First Project</string>
    <string name="edit_hint">Name</string>
    <string name="button_cube">Cube</string>
    <string name="button_rand">Randomizator</string>
    <string name="button_settings">Settings</string>

    <string name="fragment_cube">Hello blank fragment cube</string>
    <string name="roll_label">Roll</string>
    <string name="plus_cube">Plus Cube</string>
    <string name="minus_cube">Minus Cube</string>
    <string name="reset">Reset</string>

    <string name="fragment_rand">Hello blank fragment rand</string>
    <string name="result">Random Number</string>
    <string name="random">Random</string>
    <string name="number1">Between number</string>
    <string name="number2">To the number</string>

    <string name="fragment_settings_cube">Settings Cube</string>
    <string name="fragment_settings_rand">Settings Randomizator</string>

    <string name="exp">Exp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- TODO: Remove or change this placeholder text -->

    <string name="name">Zakhar String</string>

</resources>