<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textViewSettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_settings"
            android:textSize="40sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.438" />

        <Button
            android:id="@+id/button_cube"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_cube"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewSettings"
            app:layout_constraintVertical_bias="0.144" />

        <Button
            android:id="@+id/button_rand"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_rand"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_cube"
            app:layout_constraintVertical_bias="0.088" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>