<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ImageView
            android:id="@+id/dice_image1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toStartOf="@+id/dice_image2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/dice_1"
            tools:ignore="MissingConstraints" />

        <ImageView
            android:id="@+id/dice_image2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/dice_1"
            tools:ignore="MissingConstraints"
            tools:visibility="visible" />

        <ImageView
            android:id="@+id/dice_image3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:visibility="gone"
            app:layout_constraintEnd_toStartOf="@+id/dice_image4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dice_image1"
            app:srcCompat="@drawable/dice_1"
            tools:visibility="visible" />

        <ImageView
            android:id="@+id/dice_image4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dice_image2"
            app:srcCompat="@drawable/dice_1"
            tools:visibility="visible" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.97">

            <Button
                android:id="@+id/roll_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/roll_label"
                app:backgroundTint="#2196F3" />

            <Button
                android:id="@+id/plus_button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/plus_cube"
                app:backgroundTint="#4CAF50" />

            <Button
                android:id="@+id/plus_button3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/plus_cube"
                android:visibility="gone"
                app:backgroundTint="#4CAF50" />

            <Button
                android:id="@+id/plus_button4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/plus_cube"
                android:visibility="gone"
                app:backgroundTint="#4CAF50" />


            <Button
                android:id="@+id/minus_button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/minus_cube"
                android:visibility="gone"
                app:backgroundTint="#CC1D1D"
                tools:visibility="visible" />

            <Button
                android:id="@+id/minus_button3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/minus_cube"
                android:visibility="gone"
                app:backgroundTint="#CC1D1D" />


            <Button
                android:id="@+id/minus_button4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/minus_cube"
                android:visibility="gone"
                app:backgroundTint="#CC1D1D" />

            <Button
                android:id="@+id/reset_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/reset"
                app:backgroundTint="#818181" />

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>